<resources>
    <string name="app_name">FifthOne</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="nombre">Nombre</string>
    <string name="hint_name">Digite el nombre</string>
    <string name="correo">Correo</string>
    <string name="hint_correo">Digite el correo</string>
    <string name="telefono">Teléfono</string>
    <string name="hint_telef">Digite el teléfono</string>
    <string name="btn_ok">Ok</string>
    <string name="lblmasc">Masculino</string>
    <string name="lblfeme">Femenino</string>
    <string name="lblhobbie1">Gaming</string>
    <string name="lblhobbie2">Deportes</string>
    <string name="lblhobbie3">Bailar</string>
    <string name="lblhobbie4">Leer</string>
    <string name="lblsexo">Sexo</string>
    <string name="lblhobbies">Hobbies</string>
    <string name="pick_date">Fecha</string>
    <string name="lblciudad">Ciudad</string>

        <string-array name="planets_array">
            <item>Arauca</item>
            <item>Armenia</item>
            <item>Barranquilla</item>
            <item>Bogotá</item>
            <item>Bucaramanga</item>
            <item>Cali</item>
            <item>Cartagena</item>
            <item>Cúcuta</item>
            <item>Florencia</item>
            <item>Ibagué</item>
            <item>Leticia</item>
            <item>Manizales</item>
            <item>Medellín</item>
            <item>Mitú</item>
            <item>Mocoa</item>
            <item>Montería</item>
            <item>Neiva</item>
            <item>Pereira</item>
            <item>Popayan</item>
            <item>Puerto Carreño</item>
            <item>Puerto Inírida</item>
            <item>Quibdó</item>
            <item>Riohacha</item>
            <item>San Andrés</item>
            <item>San José del Guaviare</item>
            <item>San Juan de Pasto</item>
            <item>Santa Marta</item>
            <item>Sincelejo</item>
            <item>Tunja</item>
            <item>Valledupar</item>
            <item>Villavicencio</item>
            <item>Yopal</item>
        </string-array>

    <string name="h1">Gaming</string>
    <string name="h2">Deportes</string>
    <string name="h4">Bailar</string>
    <string name="h8">Leer</string>
    <string name="h3">Gaming y Deportes</string>
    <string name="h5">Gaming y Bailar</string>
    <string name="h9">Gaming y Leer</string>
    <string name="h6">Deportes y Bailar</string>
    <string name="h10">Deportes y Leer</string>
    <string name="h12">Bailar y Leer</string>
    <string name="h7">Gaming, Deportes y Bailar</string>
    <string name="h14">Deportes, Bailar y Leer</string>
    <string name="h11">Gaming, Deportes y Leer</string>
    <string name="h13">Gaming, Bailar y Leer</string>
    <string name="h15">Gaming, Deportes, Bailar y Leer</string>
    <string name="h0">Vacio</string>

    <string name="enero">Enero</string>
    <string name="febrer">Febrero</string>
    <string name="marzo">Marzo</string>
    <string name="abril">Abril</string>
    <string name="mayo">Mayo</string>
    <string name="juni">Junio</string>
    <string name="julio">Julio</string>
    <string name="agosto">Agosto</string>
    <string name="septiem">Septiembre</string>
    <string name="octub">Octubre</string>
    <string name="noviem">Noviembre</string>
    <string name="diciem">Diciembre</string>

    <string name="masc">Masculino</string>
    <string name="feme">Femenino</string>


</resources>
