<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textSize="20dp"
            android:textColor="@color/maroon"
            android:layout_weight="2"
            />
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:inputType="textPersonName"
            android:textSize="20dp"
            android:layout_weight="1"
            android:id="@+id/EdNombre"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/correo"
            android:textSize="20dp"
            android:textColor="@color/maroon"
            android:layout_weight="2"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_correo"
            android:inputType="textPersonName"
            android:textSize="20dp"
            android:layout_weight="1"
            android:id="@+id/EdCorreo"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/telefono"
            android:textSize="20dp"
            android:textColor="@color/maroon"
            android:layout_weight="2"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_telef"
            android:inputType="textPersonName"
            android:textSize="20dp"
            android:layout_weight="1"
            android:id="@+id/EdTelef"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblsexo"
        android:layout_gravity="center"
        android:textSize="20dp"
        android:textColor="@color/maroon"/>
    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        >
        <RadioButton android:id="@+id/radio_feme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/lblfeme"
            android:textSize="20dp"/>
        <RadioButton android:id="@+id/radio_masc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/lblmasc"
            android:textSize="20dp"/>
    </RadioGroup>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblhobbies"
        android:layout_gravity="center"
        android:textColor="@color/maroon"
        android:textSize="20dp"/>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        >

        <CheckBox android:id="@+id/checkbox_h1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblhobbie1"
            android:onClick="onCheckboxClicked"/>
        <CheckBox android:id="@+id/checkbox_h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblhobbie2"
            android:onClick="onCheckboxClicked"/>
        <CheckBox android:id="@+id/checkbox_h3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblhobbie3"
            android:onClick="onCheckboxClicked"/>
        <CheckBox android:id="@+id/checkbox_h4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblhobbie4"
            android:onClick="onCheckboxClicked"/>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_date"
        android:layout_gravity="center"
        android:onClick="showDatePickerDialog" />
    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_ok"
        android:layout_gravity="center"
        android:textSize="15dp"
        android:id="@+id/btnok"
        />
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        >
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:id="@+id/TxtNombre"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/correo"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:id="@+id/Txtcorreo"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/telefono"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:id="@+id/Txttelef"
            />
        </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_weight="1">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblsexo"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:id="@+id/Txtsex"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblhobbies"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:id="@+id/Txthobbies"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/pick_date"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:id="@+id/Txtfecha"
            />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>